# test_of_rust_on_mobile

./: .gitignore  Cargo.toml  README.md
.cargo/: config
src/: lib.rs
