[package]
name = "test_of_rust_on_mobile"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = "0.19.0"
symphonia = "0.4.0"

[lib]
name = "test_of_rust_on_mobile"
crate-type = ["cdylib"]
